# kanban-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml
.agents/: agents.md
backend/: .pdm-python  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/routers/: api.py  chat.py
backend/tests/: conftest.py  test_api.py  test_chat.py
docs/: developer.md  plan.md  review.md  user.md
frontend/: next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.mts
frontend/.agents/: agents.md
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/board/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
frontend/components/: Dashboard.tsx  EditableProjectTitle.tsx  Icons.tsx  KanbanBoard.tsx  KanbanBoardLoader.tsx  KanbanCard.tsx  KanbanColumn.test.tsx  KanbanColumn.tsx  LogoutButton.tsx  SidebarChat.tsx
frontend/e2e/: board.spec.ts
frontend/lib/: apiClient.ts  boardState.test.ts  boardState.ts  boardTypes.ts
